--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "component/ion",
+    "name": "mcmraak/ion",
     "description": "Laravel AJAX helper",
     "type": "component",
     "homepage": "http://mraak.ru",
